# stardock

./: .gitignore  Makefile  PKGBUILD.sh  Packerfile  README.md  dist.sh  meson.build  package.sh  stardock-devel.spec.sh  stardock.pc  stardock.spec.sh  static.sh
.github/workflows/: pages.yml  release.yml  static.yml
doc/: Doxifile.in  Makefile
include/: stardock.hh
include/stardock/: align.hh  api.hh  config.hh  diff.hh  index.hh  memory.hh  point.hh  transfer.hh
src/: main.cc
src/stardock/: align.cc  api.cc  diff.cc  index.cc  point.cc  transfer.cc
stardock/: __main__.py  generics.py
